# open5gs

./: .gitignore  Makefile  meson.build
lib/: meson.build
lib/asn1c/: meson.build
lib/asn1c/common/: asn_internal.h
lib/s1ap/: message.c
lib/statemanagement/: basic_server.py  defs.proto  defs_pb2.py  meson.build  statemanagement.c  statemanagement.h
misc/: setup_tun.sh  start_open5gs.sh
src/: meson.build
src/amf/: context.c  gmm-build.c
src/ausf/: ausf-sm.c  context.c  context.h  init.c  meson.build  nausf-handler.c  nudm-handler.c  sbi-path.c  ue-sm.c
src/instrumentation/: instrumentation.h
src/mme/: emm-sm.c  mme-context.c  mme-context.h  s1ap-build.c  s1ap-path.c
src/smf/: binding.c  context.c  gsm-sm.c  gtp-path.c  gx-handler.c  gx-path.c  n4-handler.c  namf-build.c  namf-handler.c  ngap-handler.c  npcf-build.c  npcf-handler.c  nsmf-handler.c  nudm-build.c  nudm-handler.c  pfcp-path.c  s5c-handler.c  s6b-path.c  sbi-path.c  smf-sm.c
src/statemanagement/: statemanagement.h
tests/unit/: s1ap-message-test.c
